# privacy-cash

./: .gitignore  README.md
anchor/: Anchor.toml  package-lock.json  package.json
anchor/programs/zkcash/: Cargo.toml
anchor/programs/zkcash/src/: lib.rs  merkle_tree.rs  utils.rs
anchor/programs/zkcash/tests/unit/: groth16_test.rs  merkle_tree_test.rs  mod.rs  utils_test.rs
anchor/tests/: zkcash.ts
anchor/tests/lib/: constants.ts  keypair.ts  merkle_tree.ts  prover.ts  test_alt.ts  utils.ts  utxo.ts
artifacts/circuits/: TRUSTED_SETUP.MD  transaction2.sym  verifyingkey2.json
